tests/ui/suggestions/partialeq_suggest_swap_on_e0277.stderr
error[E0277]: can't compare `String` with `T`
  --> $DIR/partialeq_suggest_swap_on_e0277.rs:10:36
   |
LL |     String::from("Girls Band Cry") == T(String::from("Girls Band Cry"));
   |                                    ^^ no implementation for `String == T`
   |
   = help: the trait `PartialEq<T>` is not implemented for `String`
help: the following other types implement trait `PartialEq<Rhs>`
  --> $SRC_DIR/core/src/bstr/traits.rs:LL:COL
   |
   = note: `String` implements `PartialEq<ByteStr>`
   |
   = note: `String` implements `PartialEq<ByteString>`
  --> $SRC_DIR/alloc/src/bstr.rs:LL:COL
   |
   = note: in this macro invocation
  ::: $SRC_DIR/alloc/src/bstr.rs:LL:COL
   |
   = note: in this macro invocation
   = note: `T` implements `PartialEq<String>`
   = note: this error originates in the macro `impl_partial_eq` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider swapping the equality
   |
LL -     String::from("Girls Band Cry") == T(String::from("Girls Band Cry"));
LL +     T(String::from("Girls Band Cry")) == String::from("Girls Band Cry");
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
